--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <br>
     <!-- question no-2 -->
     <h3>Link to a website open in Same tab</h3>
-    <a href="http://127.0.0.1:5500/asiign.html">Click Here</a>
+    <a href="./Assig.html">Click Here</a>
     <br>
     <!-- question no-3 -->
     <h3>Link to Internal file</h3>
-    <a href="http://127.0.0.1:5500/img.html"> Click Here</a>
+    <a href="./img.html"> Click Here</a>
     <!-- question no-4 -->
     <hr>
     <h3>List</h3>
-    <a href="http://127.0.0.1:5500/index11.html" target="_blank">Click here</a>
+    <a href="./index11.html" target="_blank">Click here</a>
 </fieldset>
 <br>
-<a href="./vidd.html">Click Here for Video</a>
+<a href="./video.html">Click Here for Video</a>
 </body>
 </html>
