--- a/assign3.html
+++ b/assign3.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="http://127.0.0.1:5501/index.html" frameborder="0" width="400" height="500"></iframe>
+    <iframe src="./index.html" frameborder="0" width="500" height="500"></iframe>
 </body>
 </html>
